# wireframe

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: model.hpp  renderer.hpp  screen.hpp  triangle.hpp  util.hpp
src/: main.cpp  model.cpp  renderer.cpp  screen.cpp  triangle.cpp
